--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,12 +11,15 @@ jobs:
     name: Build and Push
     steps:
       - name: git-checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install all dependencies
         run: npm install
 
       - name: Build
+        run: npm run build
+
+      - name: Push
         uses: s0/git-publish-subdir-action@develop
         env:
           REPO: self
